Finished history and added editions page

--- a/history.html
+++ b/history.html
@@ -7,27 +7,49 @@
 <body>
     <h3 class="Navigation"> Navigation: <a href="index.html">Home</a> </h3>
     <hr>
+
+    <h1>Cave game</h1>
     <p>
-        Minecraft was made by Notch, and orignally it was called "Cave game". <br>
         <img alt="Picture of one of the first versions of minecraft" src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/b/b4/Cave_game_tech_test.png/revision/latest?cb=20191215124543">
         <br>
-        <a class="source" href="https://minecraft.fandom.com">Image at "minecraft.fandom.com</a>
+        <a class="source" href="https://minecraft.fandom.com">Image at the Minecraft fandom wiki</a>
         <br>
-        In the beginning, you could only place and destroy blocks in a small world.
+        Minecraft, known as "Cave game" in its very early stages, was made by Notch in May 13, 2009. <br>
+        In this version, you could only place and destroy blocks in a small world.
     </p>
+
     <h1>Indev</h1>
     <img alt="image of minecraft indev" width="640px" src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/6/64/Indev.png/revision/latest?cb=20191215151605">
     <br>
-    <a class="source" href="https://minecraft.fandom.com"> Image at "https://minecraft.fandom.com"</a>
+    <a class="source" href="https://minecraft.fandom.com"> Image at the Minecraft fandom wiki</a>
     <p>
-        The next version of minecraft was Indev, which included procedual generation and more blocks.
+        The next version of Minecraft was Indev made in December 23, 2009, which included procedual generation and more blocks.
     </p>
+
     <h1>Infdev</h1>
     <img alt="Image of minecraft infdev" width="640px" src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/5/53/Infdev_20100325.png/revision/latest?cb=20210728234846">
     <br>
-    <a class="source" href="https://minecraft.fandom.com"> Image at "https://minecraft.fandom.com"</a>
+    <a class="source" href="https://minecraft.fandom.com"> Image at the Minecraft fandom wiki</a>
     <p>
-        This version introduced an almost infinite world. The version also added more blocks and tools.
+        This version made in February 27, 2010, introduced an almost infinite world. The version also added more blocks, tools, and mobs.
+    </p>
+
+    <h1>Alpha</h1>
+    <img alt="Image of Minecraft Alpha" width="640px" src="https://static.wikia.nocookie.net/minecraft/images/f/f9/Minecraft_alpha_3.png/revision/latest?cb=20140908215807">
+    <br>
+    <a class="source" href="https://minecraft.fandom.com">Image at the Minecraft fandom wiki</a>
+    <p>
+        Minecraft alpha made in June 30, 2010, added multiplayer, more biomes, and better procedual generation.
+    </p>
+
+    <h1>Beta and prerelease</h1>
+    <img alt="Image of Minecraft prerelease" width="660px" src="https://static.wikia.nocookie.net/minecraft_ru_gamepedia/images/9/94/Beta_1.9_Prerelease_3.png/revision/latest?cb=20190108125247">
+    <br>
+    <a class="source" href="https://minecraft.fandom.com">Image at the Minecraft fandom wiki</a>
+    <p>
+        The final development version of Minecraft, released in December 20, 2010, introduced hunger, more biomes, blocks, mobs, and structures. <br>
+        Version 1.0 of minecraft was released on November 18, 2011, and the game currently has 22 major updates, with the <br>
+        current version being 1.21.4.
     </p>
 </body>
 </html>
