--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h3 class="Navigation"> Navigation: <a href="history.html">History</a> </h3>
+        <h3 class="Navigation"> Navigation: <a href="history.html">History</a> <a href="editions.html">Editions</a> </h3>
         <hr>
         <img width="500px" alt="Minecraft Logo" src="https://cdn.prod.website-files.com/64ea57571d50b02423c4505d/64fa5f649846f59218adca46_minecraft%20logo%20png.png">
         <p class="source">
