--- a/editions.html
+++ b/editions.html
@@ -5,7 +5,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h3 class="Navigation"> Navigation: <a href="history.html">History</a> <a href="editions.html">Editions</a> </h3>
+    <h3 class="Navigation"> Navigation: <a href="history.html">History</a> <a href="index.html">Home</a> <a href="guide.html">First day guide</a> </h3>
+    <img alt="Image of Minecraft Java" width="600px" src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/7/78/Java_Edition_1.19.png/revision/latest?cb=20220607163805">
+    <img alt="Image of Minecraft Bedrock" width="600px" src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/4/47/Bedrock_1.19.83.png/revision/latest?cb=20230518084849">
+    <br>
+    <a class="source" href="https://minecraft.fandom.com">Both images from minecraft.fandom.com</a>
+
     <p>
         There are 2 editions to minecraft, bedrock, and java. <br>
         although they're both Minecraft, there is some differences between them.
@@ -24,6 +29,17 @@
     <p>
         Minecraft bedrock uses a simpler combat system, where you can swing your sword as fast as you want. <br>
         In java, you have to wait for your sword to cooldown, but axes are also stronger.
+    </p>
+    <h2>UI (user interface)</h2>
+    <p>
+        Bedrock's UI is bigger so its friendly to smartphone players, while java's ui is smaller, due to <br>
+        it being only available to desktop devices.
+    </p>
+    <h2>which should I choose?</h2>
+    <p>
+        If you aren't on windows or mac, or you want to play with friends on different devices, <br>
+        or you want a casual experience, then pick bedrock. However, if you want good modding support, <br>
+        or all your friends have a pc, and you're on windows or mac, then play java.
     </p>
 </body>
 </html>
