--- a/history.html
+++ b/history.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h3 class="Navigation"> Navigation: <a href="index.html">Home</a> </h3>
+    <h3 class="Navigation"> Navigation: <a href="index.html">Home</a> <a href="editions.html">Editions</a> <a href="guide.html">First day guide</a> </h3>
     <hr>
 
     <h1>Cave game</h1>
