--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h3 class="Navigation"> Navigation: <a href="history.html">History</a> <a href="editions.html">Editions</a> </h3>
+        <h3 class="Navigation"> Navigation: <a href="history.html">History</a> <a href="editions.html">Editions</a> <a href="guide.html">First day guide</a> </h3>
         <hr>
         <img width="500px" alt="Minecraft Logo" src="https://cdn.prod.website-files.com/64ea57571d50b02423c4505d/64fa5f649846f59218adca46_minecraft%20logo%20png.png">
         <p class="source">
@@ -13,17 +13,20 @@
             https://www.logosource.app/logos/minecraft-png-logo
         </p>
         <br>
+
         <p>
-            Minecraft is a singleplayer and multiplayer open-world survival game. <br>
-            Minecraft is played by over 204.33 million people on many different platforms.
-            <h3>List of devices you can play minecraft on:</h3>
-            <ul>
-                <li>Smart Phone</li>
-                <li>Windows</li>
-                <li>Mac</li>
-                <li>Xbox</li>
-                <li>Playstation</li>
-            </ul>
+            <i>Minecraft</i> is a singleplayer and multiplayer open-world survival game. <br>
+            Minecraft is played by over <b>204.33 million people</b> on many different platforms.
         </p>
+
+        <h3>List of devices you can play minecraft on:</h3>
+        <ul>
+            <li>Smart Phone</li>
+            <li>Windows</li>
+            <li>Mac</li>
+            <li>Xbox</li>
+            <li>Playstation</li>
+        </ul>
+
     </body>
 </html>
