--- a/editions.html
+++ b/editions.html
@@ -6,13 +6,14 @@
 </head>
 <body>
     <h3 class="Navigation"> Navigation: <a href="history.html">History</a> <a href="index.html">Home</a> <a href="guide.html">First day guide</a> </h3>
+    <h2>Java edition vs Bedrock edition</h2>
     <img alt="Image of Minecraft Java" width="600px" src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/7/78/Java_Edition_1.19.png/revision/latest?cb=20220607163805">
     <img alt="Image of Minecraft Bedrock" width="600px" src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/4/47/Bedrock_1.19.83.png/revision/latest?cb=20230518084849">
     <br>
     <a class="source" href="https://minecraft.fandom.com">Both images from minecraft.fandom.com</a>
 
     <p>
-        There are 2 editions to minecraft, bedrock, and java. <br>
+        There are 2 main editions to minecraft, bedrock, and java (also education edition). <br>
         although they're both Minecraft, there is some differences between them.
     </p>
     <h2>Supported Devices</h2>
@@ -39,7 +40,7 @@
     <p>
         If you aren't on windows or mac, or you want to play with friends on different devices, <br>
         or you want a casual experience, then pick bedrock. However, if you want good modding support, <br>
-        or all your friends have a pc, and you're on windows or mac, then play java.
+        or all your friends have a pc, or you don't mind a harder combat system, and you're on windows or mac, then play java.
     </p>
 </body>
 </html>
