--- a/guide.html
+++ b/guide.html
@@ -24,10 +24,15 @@
                 <br> <a class="source" href="https://minecraft.fandom.com">Image at the Minecraft fandom wiki</a>
             </li>
             <li>mine 9 more cobblestone to make a furnace, then find coal and iron ore and mine it with your pickaxe.</li>
-            <li>put coal at the bottom and iron at the top to smelt it. Use the iron to craft armor and tools.</li>
+            <li>put coal at the bottom and iron at the top to smelt it. Use the iron to craft armor and tools. <br>
+                <img width="70px" alt="Iron Armor" src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/0/04/Iron_Armor_JE2_BE2.png/revision/latest?cb=20191220091332">
+                <img width="100px" alt="Iron ingot" src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/f/fc/Iron_Ingot_JE3_BE2.png/revision/latest/thumbnail/width/360/height/360?cb=20230613175240">
+            </li>
             <li>Then you can craft a torch with coal and sticks, torches can prevent dangerous mobs from spawing.</li>
             <li>Finally, mine a lot of wood and craft a door with planks, then build your house. you can also craft a bed <br>
-                to skip the night. If you don't have a bed, wait until daytime to kill sheep for wool.</li>
+                to skip the night. If you don't have a bed, wait until daytime to kill sheep for wool. <br>
+                <img width="200px" alt="House" src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/1/1c/Plains_Fletcher_House_1.png/revision/latest?cb=20201021203943">
+            </li>
         </ol>
         <p>
             Once you complete these steps, then you could explore the world and find loot, or explore caves to find diamonds, <br>
