--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <h3 class="Navigation"> Navigation: <a href="history.html">History</a> <a href="editions.html">Editions</a> <a href="guide.html">First day guide</a> </h3>
         <hr>
-        <img width="500px" alt="Minecraft Logo" src="https://cdn.prod.website-files.com/64ea57571d50b02423c4505d/64fa5f649846f59218adca46_minecraft%20logo%20png.png">
+        <img width="550px" alt="Minecraft Logo" src="https://cdn.prod.website-files.com/64ea57571d50b02423c4505d/64fa5f649846f59218adca46_minecraft%20logo%20png.png">
         <p class="source">
             "Minecraft png logo" by LogoSource <br>
             https://www.logosource.app/logos/minecraft-png-logo
@@ -16,10 +16,11 @@
 
         <p>
             <i>Minecraft</i> is a singleplayer and multiplayer open-world survival game. <br>
-            Minecraft is played by over <b>204.33 million people</b> on many different platforms.
+            Minecraft is played by over <b>204.33 million people</b> on many different platforms. <br>
+            The current versions of Minecraft is 1.21.4 and 1.21.62 for bedrock.
         </p>
 
-        <h3>List of devices you can play minecraft on:</h3>
+        <h3>List of devices you can play Minecraft on:</h3>
         <ul>
             <li>Smart Phone</li>
             <li>Windows</li>
@@ -28,5 +29,33 @@
             <li>Playstation</li>
         </ul>
 
+        <h3>Mobs</h3>
+        <img width="300px" alt="Minecraft's mobs" src="https://upload.wikimedia.org/wikipedia/en/c/c9/Minecraft_Mobs.png">
+        <br> <p class="source"> <a href="https://en.wikipedia.org/wiki/Minecraft">Image from minecraft wiki</a></p>
+        <p>
+            There are hostile mobs in Minecraft that will attack the player.
+        </p>
+        <ol>
+            <li>Zombies move towards the player at a slow speed</li>
+            <li>Spiders move towards the player at a fast speed</li>
+            <li>Enderman won't be hostile until you look in its eyes. Enderman can teleport and move some blocks.</li>
+            <li>Creepers move towards the player and explode when close.</li>
+            <li>Skeletons have bows and will shoot at the player.</li>
+        </ol>
+        <h3>Biomes</h3>
+        <p>There are many different biomes in minecraft that have different blocks, structures, and plants.</p>
+        <ol>
+            <p class="source">All images below are from minecraft.fandom.com</p>
+            <img width="400px" alt="Desert biome" src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/5/52/Plains.png/revision/latest?cb=20220324022601">
+            <li>Plains biomes are the most common, its a flat landscape with trees, flowers, and grass.</li>
+            <img width="400px" alt="Desert biome" src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/6/6d/Desert.png/revision/latest?cb=20220103192043">
+            <li>Deserts are dry flat biomes that spawn cactuses and dead bush<br> Deserts can spawn desert temples with loot.</li>
+            <img width="400px" alt="Ice spike biome" src="https://static.wikia.nocookie.net/minecraft/images/8/87/Ice_Spike.png/revision/latest?cb=20160910200205">
+            <li>Ice spike biomes are cold biomes with ice spikes that can have polar bears.</li>
+            <img width="400px" alt="Taiga biome" src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/3/31/Taiga.png/revision/latest?cb=20230321210515">
+            <li>Taiga biomes have tall trees and can have berry bushes.</li>
+            <img width="400px" alt="Cherry grove biome" src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/7/73/Cherry_Grove.png/revision/latest?cb=20230414161456">
+            <li>Cherry grove biomes are biomes with cherry trees and pink flowers.</li>
+        </ol>
     </body>
 </html>
