--- a/editions.html
+++ b/editions.html
@@ -7,8 +7,8 @@
 <body>
     <h3 class="Navigation"> Navigation: <a href="history.html">History</a> <a href="index.html">Home</a> <a href="guide.html">First day guide</a> </h3>
     <h2>Java edition vs Bedrock edition</h2>
-    <img alt="Image of Minecraft Java" width="600px" src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/7/78/Java_Edition_1.19.png/revision/latest?cb=20220607163805">
-    <img alt="Image of Minecraft Bedrock" width="600px" src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/4/47/Bedrock_1.19.83.png/revision/latest?cb=20230518084849">
+    <img alt="Image of Minecraft Java" width="600px" src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/7/78/Java_Edition_1.19.png/revision/latest?">
+    <img alt="Image of Minecraft Bedrock" width="600px" src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/4/47/Bedrock_1.19.83.png/revision/latest?">
     <br>
     <a class="source" href="https://minecraft.fandom.com">Both images from minecraft.fandom.com</a>
 
