--- a/history.html
+++ b/history.html
@@ -10,7 +10,7 @@
 
     <h1>Cave game</h1>
     <p>
-        <img alt="Picture of one of the first versions of minecraft" src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/b/b4/Cave_game_tech_test.png/revision/latest?cb=20191215124543">
+        <img alt="Picture of one of the first versions of minecraft" src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/b/b4/Cave_game_tech_test.png/revision/latest?">
         <br>
         <a class="source" href="https://minecraft.fandom.com">Image at the Minecraft fandom wiki</a>
         <br>
@@ -19,7 +19,7 @@
     </p>
 
     <h1>Indev</h1>
-    <img alt="image of minecraft indev" width="640px" src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/6/64/Indev.png/revision/latest?cb=20191215151605">
+    <img alt="image of minecraft indev" width="640px" src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/6/64/Indev.png/revision/latest?">
     <br>
     <a class="source" href="https://minecraft.fandom.com"> Image at the Minecraft fandom wiki</a>
     <p>
@@ -27,7 +27,7 @@
     </p>
 
     <h1>Infdev</h1>
-    <img alt="Image of minecraft infdev" width="640px" src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/5/53/Infdev_20100325.png/revision/latest?cb=20210728234846">
+    <img alt="Image of minecraft infdev" width="640px" src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/5/53/Infdev_20100325.png/revision/latest?">
     <br>
     <a class="source" href="https://minecraft.fandom.com"> Image at the Minecraft fandom wiki</a>
     <p>
@@ -43,7 +43,7 @@
     </p>
 
     <h1>Beta and prerelease</h1>
-    <img alt="Image of Minecraft prerelease" width="660px" src="https://static.wikia.nocookie.net/minecraft_ru_gamepedia/images/9/94/Beta_1.9_Prerelease_3.png/revision/latest?cb=20190108125247">
+    <img alt="Image of Minecraft prerelease" width="660px" src="https://static.wikia.nocookie.net/minecraft_ru_gamepedia/images/9/94/Beta_1.9_Prerelease_3.png/revision/latest?">
     <br>
     <a class="source" href="https://minecraft.fandom.com">Image at the Minecraft fandom wiki</a>
     <p>
