--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
         <p>There are many different biomes in minecraft that have different blocks, structures, and plants.</p>
         <ol>
             <p class="source">All images below are from minecraft.fandom.com</p>
-            <img width="400px" alt="Desert biome" src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/5/52/Plains.png/revision/latest?cb=20220324022601">
+            <img width="400px" alt="Desert biome" src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/5/52/Plains.png/revision/latest?">
             <li>Plains biomes are the most common, its a flat landscape with trees, flowers, and grass.</li>
-            <img width="400px" alt="Desert biome" src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/6/6d/Desert.png/revision/latest?cb=20220103192043">
+            <img width="400px" alt="Desert biome" src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/6/6d/Desert.png/revision/latest?">
             <li>Deserts are dry flat biomes that spawn cactuses and dead bush<br> Deserts can spawn desert temples with loot.</li>
-            <img width="400px" alt="Ice spike biome" src="https://static.wikia.nocookie.net/minecraft/images/8/87/Ice_Spike.png/revision/latest?cb=20160910200205">
+            <img width="400px" alt="Ice spike biome" src="https://static.wikia.nocookie.net/minecraft/images/8/87/Ice_Spike.png/revision/latest?">
             <li>Ice spike biomes are cold biomes with ice spikes that can have polar bears.</li>
-            <img width="400px" alt="Taiga biome" src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/3/31/Taiga.png/revision/latest?cb=20230321210515">
+            <img width="400px" alt="Taiga biome" src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/3/31/Taiga.png/revision/latest?">
             <li>Taiga biomes have tall trees and can have berry bushes.</li>
-            <img width="400px" alt="Cherry grove biome" src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/7/73/Cherry_Grove.png/revision/latest?cb=20230414161456">
+            <img width="400px" alt="Cherry grove biome" src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/7/73/Cherry_Grove.png/revision/latest?">
             <li>Cherry grove biomes are biomes with cherry trees and pink flowers.</li>
         </ol>
     </body>
